--- a/_includes/youtubePlayer.html
+++ b/_includes/youtubePlayer.html
@@ -1,6 +1,6 @@
 <div class="embed-container">
   <iframe
-      src="https://www.youtube.com/embed/{{https://youtu.be/eVV42cE_FkI}}"
+      src="http://www.youtube.com/embed/eVV42cE_FkI"
       width="700"
       height="480"
       frameborder="0"
